--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/stm32cubel4"]
-	path = lib/stm32cubel4
-	url = https://github.com/STMicroelectronics/STM32CubeL4
+[submodule "lib/stm32cubewb"]
+	path = lib/stm32cubewb
+	url = https://github.com/STMicroelectronics/STM32CubeWB
